# liquidstoolap

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.ru.md
.github/workflows/: ci.yml  release-node-red.yml  release-python.yml  release-server.yml
benchmarks/: network_tpc_results_scale1.json  network_tpc_suite.py  pi_configure_db.sh  pi_tpc_results_scale1.json  pi_tpc_suite.py  tpch_http.py  tpch_http_results.json  tpch_http_results_scale5.json
config/: config.example.ini
docker/: config.docker.ini
docs/: SRS.md  user-guide.md  user-guide.ru.md
docs/api/: README.md  README.ru.md  openapi.yaml
docs/api/schemas/: error-response.json  health-response.json  row.json  sql-command-result.json  sql-request.json  sql-response.json  sql-result-set.json  token-response.json
docs/articles/: liquid-stoolap-benchmark-x86-arm.md
examples/curl/: health.sh  sql.sh  token.sh
sdk/python/: README.md  README.ru.md  pyproject.toml
sdk/python/src/liquidstoolap/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: smoke_sdk.py  test_client_errors.py  test_models.py
server/: Makefile  README.md  README.ru.md
server/docs/: stoolap-adapter.md
server/src/: liquidstoolap_server.lpr
server/src/liquidstoolap_server/: lsauth.pas  lsconfig.pas  lserrors.pas  lshttpserver.pas  lsrequestvalidation.pas  lsstoolapadapter.pas  lsstoolapffi.pas  lsversion.pas
server/tests/: ffi_probe.pas  smoke.sh  test_auth.pas  test_config.pas  test_errors.pas  test_requestvalidation.pas
