[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquidstoolap"
version = "0.1.0"
description = "Official Python SDK for Liquid Stoolap"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.24"]
license = "MIT"

[project.optional-dependencies]
test = ["pytest>=8"]
dev = ["build>=1.0", "mypy>=1.8", "pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/liquidstoolap"]
